First commited as before_67239_rev1